HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeEnumNonFfiPayload/Source/Main.uv
//! Rejected FFI specimen for non-FfiSafe payloads inside layout(C) enums.

#layout(C)
public enum FfiEnumWithBool {
    Value(bool)
}

extern "C" {
    public procedure importedEnum(value: FfiEnumWithBool) -> i32
}

